kubernetes/infrastructure/observability/ingress/loki-push-auth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: loki-push-auth
  namespace: observability
spec:
  basicAuth:
    secret: loki-push-auth
